--- a/src/App.css
+++ b/src/App.css
@@ -1,53 +1,12 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .Table-style {
   width: 80%;
   background-color: antiquewhite;
 }
 
 .Suspended {
-  background: red !important;
+  background: cadetblue !important;
 }
 
 .Row-style {
-  background: linear-gradient(0deg, rgba(161,242,243,1) 0%, rgba(240,223,186,1) 100%);
-  /* color: #61dafb; */
-}
-
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background: rgba(240,223,186,1)
 }
